--- a/src/Geschenke.html
+++ b/src/Geschenke.html
@@ -45,13 +45,7 @@
                 return {
                     message: "Geschenke Liste",
                     timestamp: " - Time -",
-                    products: [
-                        { id: "1", orders: 0, name: "PHP-Buch" },
-                        { id: "2", orders: 0, name: "PHP-Kochbuch" },
-                        { id: "3", orders: 0, name: "Java-Kochbuch" },
-                        { id: "4", orders: 0, name: "C++-Kochbuch" },
-                        { id: "5", orders: 0, name: "Python-Kochbuch" }
-                    ]
+                    products: [] //Auflistung der Produkte
                 };
             },
             methods: {
@@ -65,6 +59,20 @@
                         + ":" + today.getSeconds();
                     const dateTime = "" + date + ' Uhrzeit: ' + time;
                     this.timestamp = dateTime;
+                },
+                fetchData() {
+                    fetch("http://localhost/fetchProducts.php") // Replace with your actual backend URL
+                        .then(response => response.json())
+                        .then((data) => {
+                            this.products = data;
+                        })
+                        .catch(error => {
+                            console.error("Error fetching products:", error);
+                        });
+                },
+                // Other methods remain the same...
+                mounted() {
+                    this.fetchData(); // Fetch products from the backend on component mount
                 },
                 increase(index) {
                     this.products[index].orders++;
