--- a/src/Geschenke.html
+++ b/src/Geschenke.html
@@ -42,7 +42,13 @@
                 return {
                     message: "Geschenke Liste",
                     timestamp: " - Time -",
-                    products: [] //Auflistung der Produkte
+                    products: [
+                         id: "1", orders: 0, name: "PHP-Buch" },
+                        { id: "2", orders: 0, name: "PHP-Kochbuch" },
+                        { id: "3", orders: 0, name: "Java-Kochbuch" },
+                        { id: "4", orders: 0, name: "C++-Kochbuch" },
+                        { id: "5", orders: 0, name: "Python-Kochbuch" }
+                    ] //Auflistung der Produkte
                 };
             },
             methods: {
