Some Backend BS

--- a/src/Geschenke.html
+++ b/src/Geschenke.html
@@ -8,7 +8,7 @@
     <script src="https://js.stripe.com/v3/"></script>
 </head>
 <body>
-    <h1 class="text-center">Geschenke-Shop</h1>
+    <h1 class="text-center">Geschenkeshop</h1>
 
     <div id="app" class="container mt-4">
         <h3>{{ message }}</h3>
